--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-VNBHJKZWTQ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-VNBHJKZWTQ');
+</script>
+    <meta name="google-site-verification" content="xTJ6rYqrtbNXlJPS7PHe3lg7U052Tx5sVcddKkOBmGk" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Explora cómo la inteligencia artificial está transformando sectores como negocios, arte, salud y educación. Aprende sobre GPT-3, Dall-E, herramientas IA y más.">
